--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@truffle/hdwallet-provider": "^2.0.4",
+    "axios": "^0.27.2",
     "bignumber.js": "^9.0.2",
     "bootstrap": "^5.1.3",
     "moralis": "^1.5.8",
