--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-REACT_APP_MORALIS_SERVER_URL = https://bbujkvqhqxvl.usemoralis.com:2053/server
-REACT_APP_MORALIS_APPLICATION_ID = Ws0mnqlNPwAgGhgEDxm432CK66tjIHaj9gCQ1BYZ
-moralisApiKey = UbJKfGI1HQ9URzp
-moralisApiSecret = 286sQfNlHse6sZE
-PRIVATE_KEYS = 
+REACT_APP_MORALIS_SERVER_URL = https://maclx7lqlp3p.usemoralis.com:2053/server
+REACT_APP_MORALIS_APPLICATION_ID = 5ue2iuxwgM74UPEhvJVKiYcDllWcIogyydu1Lu3k
